Add query params to GET expenses
